# build-helloworld

./: .gitignore  CMakeLists.txt  Makefile.GNU  Makefile.MSVC  src_cli.c  src_gui.c  src_gui.rc  src_lib_shared.c  src_lib_shared.h  src_lib_static.c  src_lib_static.h
